--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>ilk dijango projem</title>
-</head>
-<body>
-<h1>sakarya uygulamalı bilimler üniveristesi</h1>
-<h2>bilgisayar mühendisliği</h2>
-{{ text2 }}
-</body>
-</html>
+{%  extends "homebase.html" %}
+
+{% block title %} Lab2A Projesi {% endblock %}
+
+
+{% block header %}{% include "header.html" %}{% endblock %}
+{% block sidebar %}{% include "sidebar.html" %}{% endblock %}
+{% block content %}{% include "content.html" %}{% endblock %}
+{% block footer %}{% include "footer.html" %}{% endblock %}
