imageadmin,productadmin oluşturma

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,6 +1,6 @@
 {%  extends "homebase.html" %}
 
-{% block title %} Lab2A Projesi {% endblock %}
+{% block title %} Edanur'un Projesi {% endblock %}
 
 
 {% block header %}{% include "header.html" %}{% endblock %}
