--- a/home/templates/homebase.html
+++ b/home/templates/homebase.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{% block title %} {% endblock %}İlk Django Projem</title>
+    <title>{% block title %} {% endblock %}İlk django Projem</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
