category_products.html

--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -10,7 +10,7 @@
                 <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
                         {% for i in category %}
-                        <a href="/category/{{ i.id }}/{{ i.slug }}" class="nav-item nav-link">{{ i.title }}</a>
+                        <a href="/Category/{{ i.id }}/{{ i.slug }}" class="nav-item nav-link">{{ i.title }}</a>
                         {% endfor %}
                     </div>
                 </nav>
