product_detail olusturma

--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -25,7 +25,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="/" class="nav-item nav-link active">Anasayfa</a>
+                            <a href="index.html" class="nav-item nav-link active">Anasayfa</a>
                             <a href="shop.html" class="nav-item nav-link">Shop</a>
                             <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
                             <div class="nav-item dropdown">
@@ -38,39 +38,32 @@
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
-                            {% if user.id is not None %}
-                            <a href="" class="nav-item nav-link">{{ user.first_name }}</a>
-                                <a href="/logout/" class="nav-item nav-link">Çıkış Yap</a>
-                                {% else %}
-                                <a href="/login/" class="nav-item nav-link">Login</a>
 
-                            {% endif %}
+                            <a href="" class="nav-item nav-link">{{ user.first_name }}</a>
+                            <a href="/logout/" class="nav-item nav-link">Çıkış Yap</a>
+
+
+
+
                         </div>
                     </div>
                 </nav>
                 <div id="header-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
+                         {% for i in sliderData %}
                         <div class="carousel-item active" style="height: 410px;">
-                            <img class="img-fluid" src="{%  static 'img/carousel-1.jpg' %}" alt="Image">
+                            <img class="img-fluid" src="{{ i.image.url }}" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Fashionable Dress</h3>
+                                     <h3 class="display-4 text-white font-weight-semi-bold mb-4">{{ i.title }}</h3>
                                     <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item" style="height: 410px;">
-                            <img class="img-fluid" src="img/carousel-2.jpg" alt="Image">
-                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;">
-                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                    <h3 class="display-4 text-white font-weight-semi-bold mb-4">Reasonable Price</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
-                                </div>
-                            </div>
-                        </div>
+                         {% endfor %}
                     </div>
+
                     <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
                         <div class="btn btn-dark" style="width: 45px; height: 45px;">
                             <span class="carousel-control-prev-icon mb-n2"></span>
