--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -15,7 +15,7 @@
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">{{ i.title}}</h6>
                         <div class="d-flex justify-content-center">
-                            <h6>$123.00</h6><h6 class="text-muted ml-2"><del>$123.00</del></h6>
+                            <h6>{{ i.price }}TL</h6><h6 class="text-muted ml-2"><del>{{ i.amount }}TL</del></h6>
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
@@ -41,7 +41,7 @@
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">{{ i.title}}</h6>
                         <div class="d-flex justify-content-center">
-                            <h6>$123.00</h6><h6 class="text-muted ml-2"><del>${{ i.price }}</del></h6>
+                            <h6>{{i.price}}TL</h6><h6 class="text-muted ml-2"><del>{{ i.amount }}TL</del></h6>
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
@@ -69,7 +69,7 @@
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">{{ i.title}}</h6>
                         <div class="d-flex justify-content-center">
-                            <h6>$123.00</h6><h6 class="text-muted ml-2"><del>${{ i.price }}</del></h6>
+                            <h6>{{ i.price }}TL</h6><h6 class="text-muted ml-2"><del>{{ i.amount }}TL</del></h6>
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
