--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -2,7 +2,7 @@
 {% load static %}
     <div class="container-fluid pt-5">
         <div class="text-center mb-4">
-            <h2 class="section-title px-5"><span class="px-2">Günlük Ürünler</span></h2>
+            <h2 class="section-title px-5"style="color: #0c5460"><span class="px-2">GÜNLÜK ÜRÜNLER</span></h2>
         </div>
         <div class="row px-xl-5 pb-3">
             <!--ürün baslangıc noktası -->
@@ -10,7 +10,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{{i.image.url}}" alt="" style="width:300px;height:300px;">
+                        <img class="img-fluid w-100" src="{{i.image.url}}" alt="" style="width:250px;height:250px;">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">{{ i.title}}</h6>
@@ -28,7 +28,7 @@
         </div>
 
     <div class="text-center mb-4">
-            <h2 class="section-title px-5"><span class="px-2">Son Eklenen Ürünler</span></h2>
+            <h2 class="section-title px-5" STYLE="color: #0c5460"><span class="px-2">SON EKLENEN ÜRÜNLER</span></h2>
         </div>
         <div class="row px-xl-5 pb-3">
             <!--ürün baslangıc noktası -->
@@ -36,7 +36,7 @@
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
                 <div class="card product-item border-0 mb-4">
                     <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-                        <img class="img-fluid w-100" src="{{i.image.url}}" alt="" style="width:300px;height:300px;">
+                        <img class="img-fluid w-100" src="{{i.image.url}}" alt="" style="width:200px;height:200px;">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
                         <h6 class="text-truncate mb-3">{{ i.title}}</h6>
@@ -56,7 +56,7 @@
 
 
     <div class="text-center mb-4">
-            <h2 class="section-title px-5"><span class="px-2">Önerilen Ürünler</span></h2>
+            <h2 class="section-title px-5" STYLE="color: #0c5460"><span class="px-2">ÖNERİLEN ÜRÜNLER</span></h2>
         </div>
         <div class="row px-xl-5 pb-3">
             <!--ürün baslangıc noktası -->
