--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -3,12 +3,12 @@
     <div class="container-fluid mb-5">
         <div class="row border-top px-xl-5">
             <div class="col-lg-3 d-none d-lg-block">
-                <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 65px; margin-top: -1px; padding: 0 30px;">
-                    <h6 class="m-0">Categories</h6>
+                <a class="btn shadow-none d-flex align-items-center justify-content-between bg-primary text-white w-100" data-toggle="collapse" href="#navbar-vertical" style="height: 40px; margin-top: -1px; padding: 0 30px;">
+                    <h6 class="m-0" style="color: #0c5460">Katagoriler</h6>
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
                 <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
-                    <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
+                    <div class="navbar-nav w-100 overflow-hidden" style="height: 200px;background-color: #a1b6ff">
                         {% for i in category %}
                         <a href="/Category/{{ i.id }}/{{ i.slug }}" class="nav-item nav-link">{{ i.title }}</a>
                         {% endfor %}
@@ -18,29 +18,29 @@
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
-                        <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
+                        <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>ALIŞVERİS</h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link active">Anasayfa</a>
-                            <a href="shop.html" class="nav-item nav-link">Shop</a>
-                            <a href="detail.html" class="nav-item nav-link">Shop Detail</a>
+                            <a href="index.html" class="nav-item nav-link active"style="color: #0c5460">Anasayfa</a>
+                            <a href="shop.html" class="nav-item nav-link"style="color: #0c5460">Alışveriş</a>
+                            <a href="detail.html" class="nav-item nav-link" style="color: #0c5460">Shop Detail</a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"style="color: #0c5460">Pages</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="cart.html" class="dropdown-item">Shopping Cart</a>
                                     <a href="checkout.html" class="dropdown-item">Checkout</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link"style="color: #0c5460">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
 
                             <a href="" class="nav-item nav-link">{{ user.first_name }}</a>
-                            <a href="/logout/" class="nav-item nav-link">Çıkış Yap</a>
+                            <a href="/logout/" class="nav-item nav-link"style="color: #a1b6ff">Çıkış</a>
 
 
 
@@ -48,22 +48,29 @@
                         </div>
                     </div>
                 </nav>
-                <div id="header-carousel" class="carousel slide" data-ride="carousel">
+                   <div id="header-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
-                         {% for i in sliderData %}
                         <div class="carousel-item active" style="height: 410px;">
-                            <img class="img-fluid" src="{{ i.image.url }}" alt="Image">
+                            <img class="img-fluid" src="{%  static 'img/3200_koşu_bandı.PNG' %}" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
-                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">10% Off Your First Order</h4>
-                                     <h3 class="display-4 text-white font-weight-semi-bold mb-4">{{ i.title }}</h3>
-                                    <a href="" class="btn btn-light py-2 px-3">Shop Now</a>
+
+
+                                    <a href="" class="btn btn-light py-2 px-3">ALIŞVERİŞE BAŞLA</a>
                                 </div>
                             </div>
                         </div>
-                         {% endfor %}
-                    </div>
+                        <div class="carousel-item" style="height: 410px;">
+                            <img class="img-fluid"  alt="Image">
+                            <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                                <div class="p-3" style="max-width: 700px;">
 
+
+                                    <a href="" class="btn btn-light py-2 px-3">ALIŞVERİŞE BAŞLA</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <a class="carousel-control-prev" href="#header-carousel" data-slide="prev">
                         <div class="btn btn-dark" style="width: 45px; height: 45px;">
                             <span class="carousel-control-prev-icon mb-n2"></span>
