login,logout system added

--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -7,7 +7,7 @@
                     <h6 class="m-0" style="color: #0c5460">Katagoriler</h6>
                     <i class="fa fa-angle-down text-dark"></i>
                 </a>
-                <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
+                <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0"id="navbar-vertical">
                     <div class="navbar-nav w-100 overflow-hidden" style="height: 200px;background-color: #a1b6ff">
                         {% for i in category %}
                         <a href="/Category/{{ i.id }}/{{ i.slug }}" class="nav-item nav-link">{{ i.title }}</a>
@@ -38,13 +38,13 @@
                             <a href="contact.html" class="nav-item nav-link"style="color: #0c5460">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
-
+                            {% if user.id is not None %}
                             <a href="" class="nav-item nav-link">{{ user.first_name }}</a>
-                            <a href="/logout/" class="nav-item nav-link"style="color: #a1b6ff">Çıkış</a>
-
-
-
-
+                                <a href="/logout/" class="nav-item nav-link">Çıkış Yap</a>
+                                {% else %}
+                               <a href="/login/" class="nav-item nav-link">Login</a>
+                                 <a href="" class="nav-item nav-link">Register</a>
+                            {% endif %}
                         </div>
                     </div>
                 </nav>
