--- a/home/templates/category_products.html
+++ b/home/templates/category_products.html
@@ -19,7 +19,7 @@
                         <img class="img-fluid w-100" src="{{i.image.url}}" alt="">
                     </div>
                     <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-                        <h6 class="text-truncate mb-3">{{ i.title}}</h6>
+                        <h6 class="text-truncate mb-3"style="color: #007bff">{{ i.title}}</h6>
                         <div class="d-flex justify-content-center">
                             <h6>{{ i.price }}TL</h6><h6 class="text-muted ml-2"><del>{{ i.amount }}TL</del></h6>
                         </div>
