--- a/home/templates/product_detail.html
+++ b/home/templates/product_detail.html
@@ -170,7 +170,7 @@
                                 <form method="POST" action="/product/addcomment/{{ i.id }}">
                                 {% csrf_token %}
                                     <div class="form-group">
-                                        <label for="message">Yorumunuz *</label>
+                                        <label for="message"> Ürün Hakkında Yorum Bırakınız...</label>
                                         <textarea id="comment" name="comment" cols="30" rows="5" class="form-control"></textarea>
                                     </div>
                                     <div class="form-group">
