--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -25,7 +25,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="index.html" class="nav-item nav-link active"style="color: #0c5460">Anasayfa</a>
+                            <a href="/" class="nav-item nav-link active"style="color: #0c5460">Anasayfa</a>
                             <a href="shop.html" class="nav-item nav-link"style="color: #0c5460">Alışveriş</a>
                             <a href="detail.html" class="nav-item nav-link" style="color: #0c5460">Shop Detail</a>
                             <div class="nav-item dropdown">
