--- a/user/templates/user_profile.html
+++ b/user/templates/user_profile.html
@@ -1,11 +1,11 @@
 {%  extends "homebase.html" %}
 {%  load static %}
 {% block title %} {% for setting in settings %} {{ setting.title}}{% endfor %} {% endblock %}
-{% block sidebar %} {% include 'sidebar.html' %}{% endblock %}
+{% block header %}{% include "header.html" %}{% endblock %}
 {% block content %}
-
+{{ user.user.username }}
 {% endblock %}
 
-{% block header %}{% include "header.html" %}{% endblock %}
+
 
 {% block footer %}{% include "footer.html" %}{% endblock %}
