--- a/home/static/css/style.css
+++ b/home/static/css/style.css
@@ -61,7 +61,7 @@ body {
   line-height: 1.5;
   color: #6F6F6F;
   text-align: left;
-  background-color: #007bff;
+  background-color: #7300ff;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -158,7 +158,7 @@ a {
 }
 
 a:hover {
-  color: #ba6a62;
+  color: #62a1ba;
   text-decoration: underline;
 }
 
@@ -1706,7 +1706,7 @@ pre code {
 .table-danger td,
 .table-danger thead th,
 .table-danger tbody + tbody {
-  border-color: #ed969e;
+  border-color: #da96ed;
 }
 
 .table-hover .table-danger:hover {
@@ -6094,7 +6094,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #D19C97 !important;
+  background-color: #d197ba !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
