--- a/home/templates/content.html
+++ b/home/templates/content.html
@@ -19,8 +19,8 @@
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
-                        <a href="/product/{{ i.id }}/{{ i.slug }}" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                        <a href="/product/{{ i.id }}/{{ i.slug }}" class="btn btn-sm text-dark p-0"style="background-color: #0f6674;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+
                     </div>
                 </div>
             </div>
@@ -45,8 +45,8 @@
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
-                        <a href="/product/{{ i.id }}/{{ i.slug }}" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                        <a href="/product/{{ i.id }}/{{ i.slug }}" class="btn btn-sm text-dark p-0"style="background-color: #0f6674;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+
                     </div>
                 </div>
             </div>
@@ -73,8 +73,8 @@
                         </div>
                     </div>
                     <div class="card-footer d-flex justify-content-between bg-light border">
-                        <a href="/product/{{ i.id }}/{{ i.slug }}" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
-                        <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+                        <a href="/product/{{ i.id }}/{{ i.slug }}" class="btn btn-sm text-dark p-0"style="background-color: #0f6674;"><i class="fas fa-eye text-primary mr-1"></i>View Detail</a>
+
                     </div>
                 </div>
             </div>
