--- a/home/templates/footer.html
+++ b/home/templates/footer.html
@@ -2,7 +2,7 @@
         <div class="row px-xl-5 pt-5">
             <div class="col-lg-4 col-md-12 mb-5 pr-3 pr-xl-5">
                 <a href="" class="text-decoration-none">
-                    <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border border-white px-3 mr-1"style="background-color: #0c5460">ALPHA</span>SPOR</h1>
+                    <h1 class="mb-4 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border border-white px-3 mr-1"style="background-color: #0c5460">SPORALPHA</span></h1>
                 </a>
                 <p>SPOR ÜRÜNLERİ.</p>
                 <p class="mb-2"><i class="fa fa-map-marker-alt text-primary mr-3"></i> İstanbul, Türkiye</p>
