--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -18,14 +18,14 @@
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <a href="" class="text-decoration-none d-block d-lg-none">
-                        <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1"style="background-color: #0c5460">Alpha</span>Spor</h1>
+                        <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1"style="background-color: #0c5460">Alpha Spor</span></h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto py-0">
-                            <a href="/" class="nav-item nav-link active"style="color: #0c5460">Anasayfa</a>
+                            <a href="/" class="nav-item nav-link active"style="color: #0c5460"><b>Anasayfa</b></a>
                             <a href="shop.html" class="nav-item nav-link"style="color: #0c5460"></a>
                             <a href="detail.html" class="nav-item nav-link" style="color: #0c5460"></a>
 
@@ -33,11 +33,11 @@
                         </div>
                         <div class="navbar-nav ml-auto py-0">
                             {% if user.id is not None %}
-                            <a href="/user/" class="nav-item nav-link">{{ user.first_name }}</a>
-                                <a href="/logout/" class="nav-item nav-link">Çıkış Yap</a>
+                            <a href="/user/" class="nav-item nav-link"style="background-color: #bd726b">{{ user.first_name }}</a>
+                                <a href="/logout/" class="nav-item nav-link"style="background-color: #bd726b">Çıkış Yap</a>
                                 {% else %}
-                               <a href="/login/" class="nav-item nav-link">Login</a>
-                                 <a href="" class="nav-item nav-link">Register</a>
+                               <a href="/login/" class="nav-item nav-link"style="background-color: #bd726b">Login</a>
+                                 <a href="" class="nav-item nav-link"style="background-color: #bd726b">Register</a>
                             {% endif %}
                         </div>
                     </div>
@@ -49,9 +49,9 @@
                             <img class="img-fluid" src="{%  static 'images/3200_koşu_bandı.PNG' %}" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
-                                    <h4 class="text-light text-uppercase font-weight-medium mb-3">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
+                                    <h4 class="text-light text-uppercase font-weight-medium mb-3"style="color: #1C1C1C">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
 
-                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #bd726b">Alışverişe Başla</a>
+                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
                                 </div>
                             </div>
                         </div>
@@ -60,7 +60,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3"style="color: #007bff">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
-                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #bd726b">Alışverişe Başla</a>
+                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
                                 </div>
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
-                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #bd726b">Alışverişe Başla</a>
+                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
                                 </div>
                             </div>
                         </div>
@@ -78,7 +78,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
-                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #bd726b">Alışverişe Başla</a>
+                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
                                 </div>
                             </div>
                         </div>
