--- a/home/templates/category_products.html
+++ b/home/templates/category_products.html
@@ -8,7 +8,7 @@
     <div class="container-fluid pt-5">
         <div class="text-center mb-4">
             {% for i in selectedCategory %}
-            <h2 class="section-title px-5"><span class="px-2">{{ i.title}}</span></h2>
+            <h2 class="section-title px-5"><span class="px-2"style="color: #0f6674">{{ i.title}}</span></h2>
             {% endfor %}
         </div>
         <div class="row px-xl-5 pb-3">
