--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -43,7 +43,7 @@
                     </div>
                 </nav>
 
-              <div id="header-carousel" class="carousel slide" data-ride="carousel">
+              <div id="header-carousel" class="carousel slide" data-ride="carousel"
                     <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 410px;">
                             <img class="img-fluid" src="{%  static 'images/3200_koşu_bandı.PNG' %}" alt="Image">
@@ -51,7 +51,7 @@
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3"style="color: #1C1C1C">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
 
-                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
+                                    <a href="/" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
                                 </div>
                             </div>
                         </div>
@@ -60,7 +60,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3"style="color: #007bff">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
-                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
+                                    <a href="/" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
                                 </div>
                             </div>
                         </div>
@@ -69,7 +69,7 @@
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
-                                    <a href="" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
+                                    <a href="/" class="btn btn-light py-2 px-3"style="background-color: #a1b6ff">Alışverişe Başla</a>
                                 </div>
                             </div>
                         </div>
