--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -43,7 +43,7 @@
                     </div>
                 </nav>
 
-              <div id="header-carousel" class="carousel slide" data-ride="carousel"
+              <div id="header-carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 410px;">
                             <img class="img-fluid" src="{%  static 'images/3200_koşu_bandı.PNG' %}" alt="Image">
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                         <div class="carousel-item" style="height: 410px;">
-                            <img class="img-fluid" src="{% static 'img/evtipi.jpeg' %}" alt="Image">
+                            <img class="img-fluid" src="{% static 'images/pilates.jpeg' %}" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3"style="color: #007bff">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="carousel-item" style="height: 410px;">
-                            <img class="img-fluid" src="{% static 'img/yenipilates1.jpg' %}" alt="Image">
+                            <img class="img-fluid" src="{% static 'images/diesel_51c_motor.PNG' %}" alt="Image">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                                 <div class="p-3" style="max-width: 700px;">
                                     <h4 class="text-light text-uppercase font-weight-medium mb-3">İNDİRİMLİ SPOR ÜRÜNLERİ</h4>
