--- a/home/templates/sidebar.html
+++ b/home/templates/sidebar.html
@@ -37,7 +37,7 @@
                                 <a href="/logout/" class="nav-item nav-link"style="background-color: #bd726b">Çıkış Yap</a>
                                 {% else %}
                                <a href="/login/" class="nav-item nav-link"style="background-color: #bd726b">Login</a>
-                                 <a href="" class="nav-item nav-link"style="background-color: #bd726b">Register</a>
+                                 <a href="/register/" class="nav-item nav-link"style="background-color: #bd726b">Register</a>
                             {% endif %}
                         </div>
                     </div>
